Updates index page to include unit selector, makes test pass

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
           <input type="text" id="height-in-cm" placeholder="Height">
       </div>
 
+      <select id="unit">
+        <option>Metric</option>
+        <option>Imperial</option>
+      </select>
+
       <button type="submit" value="Calculate"> Calculate </button>
   </form>
   <div>
