--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
 <body>
   <form id="calculate">
       <div id="metric-inputs">
-          <input type="text" id="weight-in-kgs" placeholder="Weight">
-          <input type="text" id="height-in-cm" placeholder="Height">
+          <input type="text" id="weight" placeholder="Weight">
+          <input type="text" id="height" placeholder="Height">
       </div>
 
-      <select id="unit">
+      <select id="method">
         <option>Metric</option>
         <option>Imperial</option>
       </select>
@@ -63,8 +63,8 @@
     const calculateBMI = () => {
         return new Promise(resolve => {
             // Here, for learning purposes, we will use 'document.getElementById()' to get hold of a element
-            let w = parseFloat(document.getElementById('weight-in-kgs').value);
-            let h = parseFloat(document.getElementById('height-in-cm').value);
+            let w = parseFloat(document.getElementById('weight').value);
+            let h = parseFloat(document.getElementById('height').value);
             let person = new Person({
                 weight: w,
                 height: h,
