Adds readme and moves index.html to main project folder & updates links, readies for deployment

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Reference: https://www.thecalculatorsite.com/articles/health/bmi-formula-for-bmi-calculations.php -->
+
 <!DOCTYPE html>
 <html>
 
@@ -10,9 +12,9 @@
     <link href="https://cdn.muicss.com/mui-0.9.41/css/mui.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.muicss.com/mui-0.9.41/js/mui.min.js"></script>
 
-    <script src="js/dom-eventlistener.js"></script>
-    <script src="js/person.js"></script>
-    <script src="js/calculator.js"></script>
+    <script src="src/js/dom-eventlistener.js"></script>
+    <script src="src/js/person.js"></script>
+    <script src="src/js/calculator.js"></script>
 </head>
 
 <body style="font-size: 18px">
